--- a/frontend/src/components/Pins/PinShow.css
+++ b/frontend/src/components/Pins/PinShow.css
@@ -115,6 +115,8 @@
   left: -90px;
   box-shadow: 0px 1px 20px 0px rgba(0, 0, 0, 0.1);
   z-index: 1;
+  max-height: 360px;
+  overflow-y: auto;
 }
 
 #board-options {
