--- a/frontend/src/components/Profile/Board/BoardShow.css
+++ b/frontend/src/components/Profile/Board/BoardShow.css
@@ -38,6 +38,10 @@
   margin-bottom: 50px;
 }
 
+#board-show-page #pins-index-container {
+  height: 100%;
+}
+
 .board-drop-ellipsis#ellipsis-btn {
   margin-left: 16px;
   color: black;
